<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_text"
            android:id="@+id/tempText"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/than"
            android:entries="@array/than"
            android:layout_alignBaseline="@id/tempText"
            android:layout_toEndOf="@id/tempText"></Spinner>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tempText"
            android:hint="@string/tempature"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:layout_toEndOf="@id/than"
            android:id="@+id/temp1"
            android:digits="@string/digits"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="°C 提醒开启空调"
            android:textSize="15dp"
            android:layout_alignBaseline="@id/tempText"
            android:layout_toEndOf="@id/temp1"
            android:id="@+id/temp_unit1"/>
        <Button
            android:id="@+id/btTemp"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/temp1"
            android:text="确定"
            android:textSize="15dp"/>
    </RelativeLayout>

