<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a24442.air_conditioner.MainActivity">

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fg_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_home"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_home"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_people"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fg_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_people"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_people"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_voice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fg_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_voice"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_voice"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fg_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_location"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_location"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fg_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_text1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_text"
            android:textColor="@drawable/tab_text"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/div_white"
        android:layout_above="@id/ly_tab_bar"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:id="@+id/container">

    </FrameLayout>


</RelativeLayout>

