<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"


    tools:context="com.example.a24442.air_conditioner.ElectrcityList">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/title"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openTime"
                android:textSize="20dp"
                android:id="@+id/durTime"
                android:textColor="@color/lightpink"
                />
            <TextView
                android:layout_marginLeft="250dp"
                android:layout_alignBaseline="@+id/durTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeSet"
                android:text="20h"
                android:textColor="@color/lightpink"
                android:textSize="20dp"
                />

            <Spinner
                android:id="@+id/monthChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:background="@color/lightpink"
                android:entries="@array/months"
                android:textColor="@color/lightpink"></Spinner>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electric"
                android:textSize="20dp"
                android:id="@+id/electric"
                android:textColor="@color/lightpink"
                />
            <TextView
                android:layout_marginLeft="250dp"
                android:layout_alignBaseline="@+id/electric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="150度"
                android:textSize="20dp"
                android:id="@+id/electricSet"
                android:textColor="@color/lightpink"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricPrice"
                android:textSize="20dp"
                android:id="@+id/price"
                android:textColor="@color/lightpink"
                />
            <TextView
                android:layout_marginLeft="250dp"
                android:layout_alignBaseline="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.5元／度"
                android:textSize="20dp"
                android:id="@+id/priceSet"
                android:textColor="@color/lightpink"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginTop="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricCost"
                android:textSize="20dp"
                android:id="@+id/cost"
                android:textColor="@color/lightpink"
                />
            <TextView
                android:layout_marginLeft="250dp"
                android:layout_alignBaseline="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="300元"
                android:textSize="20dp"
                android:id="@+id/costSet"
                android:textColor="@color/lightpink"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/costDetail">
            <TextView
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/cost"
                android:id="@+id/detail"
                android:textColor="@color/lightpink"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="250dp"
                android:src="@drawable/detail"
                android:id="@+id/detailImage"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/chart">
            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/costChart"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>