<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a24442.air_conditioner.SituationEdit">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/title"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/leaveMode"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/leave"
            android:id="@+id/leaveImage"/>
        <TextView
            android:id="@+id/leaveText"
            android:text="@string/leaveMode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/leaveImage"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/detail"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/leaveEditMode">
    <include layout="@layout/leafhome_edit"></include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/peopleMode"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/people"
            android:id="@+id/peopleImage"/>
        <TextView
            android:id="@+id/peopleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/peopleImage"
            android:text="@string/peopleMode"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/detail"
            android:layout_marginLeft="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/peopleEditMode">
    <include layout="@layout/peoplemode_edit"></include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/temperatureMode"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/temperature"
            android:id="@+id/temperatureImage"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/temperatureImage"
            android:text="@string/tempatureMode"
            android:id="@+id/temperatureText"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/detail"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" android:id="@+id/tempEditMode">
        <include layout="@layout/temp_felt_edit"></include>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/customizeMode"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/customize"
            android:layout_alignParentLeft="true"
            android:id="@+id/customizeImage"/>
        <TextView
            android:id="@+id/customizeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/customizeImage"
            android:text="@string/customizeMode"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/detail"
            android:layout_marginLeft="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>

</ScrollView>
